# anilist-rust-cli

./: Cargo.toml  README.md
src/: anilist_client.rs  main.rs
