[package]
name = "anilist"
version = "0.1.0"
authors = ["jeremysamuel13 <70209502+jeremysamuel13@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
